# slice

slice/: CMakeLists.txt  config.cfg
slice/source/slice/: CMakeLists.txt  main.cpp
slice/source/slice/root/: ConfigReader.cpp  MergeFiles.cpp
slice/source/slice/slice/: ConfigReader.h  MergeFiles.h  SourceFiles.h
